bleed fix

--- a/html/wp-content/plugins/hero-block/src/style.scss
+++ b/html/wp-content/plugins/hero-block/src/style.scss
@@ -50,13 +50,20 @@
 
 @media screen and (max-width: 960px) {
 	.card {
-		flex-direction: column-reverse;
+		display: grid;
+		grid-template-rows: 1fr 1fr;
+		width: 100vw;
 		.card__content {
 			margin: 25px;
 			width: 70%;
 		}
 		.card__image__wrapper {
 			width: auto;
+			grid-row: 1;
+			.card__image {
+				width: 100vw;
+				object-fit: cover;
+			}
 		}
 	}
 }
@@ -64,13 +71,20 @@
 /* Mobile */
 @media screen and (max-width: 480px) {
 	.card {
-		flex-direction: column-reverse;
+		display: grid;
+		grid-template-rows: 1fr 1fr;
+		width: 100vw;
 		.card__content {
 			margin: 25px;
 			width: 70%;
 		}
 		.card__image__wrapper {
 			width: auto;
+			grid-row: 1;
+			.card__image {
+				width: 100vw;
+				object-fit: cover;
+			}
 		}
 	}
 }
